<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/scale"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="381dp"
        android:background="@color/purple"
        android:src="@drawable/login2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/login2"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/numberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="-25dp"
        app:layout_constraintTop_toBottomOf="@+id/scale">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter your number"
                tools:ignore="HardcodedText" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="9dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/userNumber"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendOtp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/send_otp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/otpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardCornerRadius="12dp"
        app:cardElevation="7dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="-50dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/scale">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView1" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/userOtp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/verifyOtp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/verifyOtp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>