<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="8dp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/gradpur_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@null"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="453dp"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:id="@+id/chat"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="35dp"
                android:contentDescription="@string/chat"
                app:srcCompat="@drawable/chat" />

            <ImageView
                android:id="@+id/heart"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/love"
                app:srcCompat="@drawable/love"
                app:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/textView3"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/textView4"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/textView4"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>