<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/purple"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Let's know you"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/source_sans_pro_semibold_italic"
                android:text="provide your details"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText">

            </TextView>


        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/numberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="-120dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="7dp"
            app:layout_constraintTop_toBottomOf="@+id/scale"
            tools:layout_editor_absoluteX="72dp">


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/scale"
                tools:layout_editor_absoluteX="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/register" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/abhaya_libre_semibold"
                    android:text="please upload your image"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Age"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userEmail"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userCity"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userInterest"
                    android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>




                <CheckBox
                    android:id="@+id/termsCondition"
                    android:layout_width="223dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/abhaya_libre_bold"
                    android:text="@string/termsCondition"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                    tools:layout_editor_absoluteX="12dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/saveData"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_purple"
                    android:backgroundTint="@color/purple"
                    android:text="@string/saveData"
                    android:textColor="@color/white" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>